<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
        >
    <TextView
              android:text="@string/txtBrightnessLevelConfig"
              android:layout_height="wrap_content"
              android:layout_width="wrap_content"
              android:gravity="center_horizontal"
            >
    </TextView>
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            >
        <Button android:text="@string/btnClearAll"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:layout_weight="1"
                android:id="@+id/buttonConfigClear"
                />
        <Button android:text="@string/btnAdd"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:id="@+id/buttonConfigAdd"
                android:layout_weight="1"
                />
        <Button android:text="@string/btnOK"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:layout_weight="1"
                android:id="@+id/buttonConfigClose"
                />
    </LinearLayout>
    <LinearLayout android:id="@+id/adview_in_config"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
            />
    <ListView android:id="@+id/timerList"
              android:layout_height="fill_parent"
              android:layout_width="fill_parent"
              android:layout_weight="1"
              android:transcriptMode="normal"
            />
    <TextView android:text="@string/txtContextMenuHint"
              android:layout_height="wrap_content"
              android:layout_width="fill_parent"
              android:layout_gravity="center_horizontal"
            />
</LinearLayout>
