<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:background="@android:color/transparent"
              android:id="@+id/layout_root"
              android:padding="5dp"
        >
    <TextView android:text="@string/txtManualOverride"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
            />
    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:gravity="center_horizontal"
            >
        <Button android:id="@+id/buttonLevel0"
                android:text="0%"
                android:textSize="20dip"
                android:layout_width="70dip"
                android:layout_height="wrap_content"
                />
        <Button android:id="@+id/buttonLevel15"
                android:text="15%"
                android:textSize="20dip"
                android:layout_width="70dip"
                android:layout_height="wrap_content"
                />
        <Button android:id="@+id/buttonLevel25"
                android:text="25%"
                android:textSize="20dip"
                android:layout_width="70dip"
                android:layout_height="wrap_content"
                />
        <Button android:id="@+id/buttonLevel35"
                android:text="35%"
                android:textSize="20dip"
                android:layout_width="70dip"
                android:layout_height="wrap_content"
                />
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:gravity="center_horizontal"
            >
        <Button android:id="@+id/buttonLevel45"
                android:text="45%"
                android:textSize="20dip"
                android:layout_width="70dip"
                android:layout_height="wrap_content"
                />
        <Button android:id="@+id/buttonLevel65"
                android:text="65%"
                android:textSize="20dip"
                android:layout_width="70dip"
                android:layout_height="wrap_content"
                />
        <Button android:id="@+id/buttonLevel85"
                android:text="85%"
                android:textSize="20dip"
                android:layout_width="70dip"
                android:layout_height="wrap_content"
                />
        <Button android:id="@+id/buttonLevel100"
                android:text="100%"
                android:textSize="18dip"
                android:layout_width="70dip"
                android:layout_height="wrap_content"
                />
    </LinearLayout>
    <CheckBox android:layout_height="wrap_content"
              android:layout_width="fill_parent"
              android:text="@string/txtAutoHide"
              android:checked="true"
              android:id="@+id/buttonScheduleAutoHide"
            />
    <TextView android:layout_height="wrap_content"
              android:layout_width="fill_parent"
              android:text="@string/txtAutomatic"
            />
    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:gravity="center_horizontal"
            >
        <CheckBox  android:layout_height="fill_parent"
                   android:layout_width="wrap_content"
                   android:checked="true"
                   android:text="@string/txtSchedule"
                   android:textSize="20dp"
                   android:layout_weight="2"
                   android:id="@+id/buttonScheduleCheck"
                />
        <Button android:text="@string/txtConfig"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/buttonScheduleConfig"
                />
    </LinearLayout>
    <Button android:text="@android:string/ok"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/buttonSettingOK"
            android:textSize="20dip"
            />
</LinearLayout>